--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@
     font-size: 16px;
     display: inline-block;
     background: yellow;
-    padding: 10px;
-    margin-left: 10px;
+    box-sizing: border-box;
+    border: 2px solid black;
 }
 
 a {
@@ -11,11 +11,12 @@ a {
     text-decoration: none;
 }
 
-li {
-    padding: 10px;
+.recipe-list {
+
+    padding-right: 20px;
 }
 
-h1 {
 
-    padding-left: 10px;
+a {
+    padding: 20px;
 }
